criação de html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+War
+
+Nada de Novo no Front | Trailer oficial | Netflix
+https://www.youtube.com/watch?v=vwbySrsD7RU
