--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<header> War </header>
+<header> 
+    Filmes de Guerra 
+</header> 
 
-Nada de Novo no Front | Trailer oficial | Netflix
+<h3>
+    Nada de Novo no Front | Trailer oficial | Netflix
+</h3>
+
 <img href="https://www.youtube.com/watch?v=vwbySrsD7RU">
