--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@
     Nada de Novo no Front | Trailer oficial | Netflix
 </h3>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/vwbySrsD7RU?si=wyLaW1g_g-BigqG2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/vwbySrsD7RU?si=JHhDpQiHkQThxUBK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
