--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<html>
+
+<head>
+<title>Web filmes</title>
+<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
 <header> 
     <h1>
       Filmes de Guerra 
@@ -8,4 +17,11 @@
     Nada de Novo no Front | Trailer oficial | Netflix
 </h3>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/vwbySrsD7RU?si=JHhDpQiHkQThxUBK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/vwbySrsD7RU?si=JHhDpQiHkQThxUBK" 
+title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+referrerpolicy="strict-origin-when-cross-origin" 
+allowfullscreen>
+  </iframe>
+
+</body>
+</html>
