--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <title>Web.filmes</title>
 <link rel="stylesheet" href="style.css">
 </head>
-
+<style>
+  body {
+    align-items: center;
+  }
+</style>
 <body>
 
 <header> 
