--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <html>
 
 <head>
-<title>Web.filmes</title>
-<link rel="stylesheet" href="style.css">
+  <title>Web.filmes</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<header> 
+  <header>
     <h1>
-      Filmes de Guerra 
+      Filmes de Guerra
     </h1>
-</header> 
+  </header>
 
-<h3>
+  <h3>
     Nada de Novo no Front | Trailer oficial | Netflix
-</h3>
+  </h3>
 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/vwbySrsD7RU?si=JHhDpQiHkQThxUBK" 
-title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-referrerpolicy="strict-origin-when-cross-origin" 
-allowfullscreen> <br>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/vwbySrsD7RU?si=JHhDpQiHkQThxUBK"
+    title="YouTube video player" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen> <br>
   </iframe>
 
 </body>
+
 </html>
