--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </h1>
   </header>
 
-  <scetion>
+  <section>
 
     <h3>
       Nada de Novo no Front | Trailer oficial | Netflix
@@ -26,7 +26,7 @@
       referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
     </iframe>
 
-  </scetion>
+  </section>
 
 </body>
 
