--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
   </header>
 
   <section>
+    <div class="chamada-texto">
 
-    <h3>
-      Nada de Novo no Front | Trailer oficial | Netflix
-    </h3>
+      <h3>
+        Nada de Novo no Front | Trailer oficial | Netflix
+      </h3>
+
+    </div>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/vwbySrsD7RU?si=JHhDpQiHkQThxUBK"
       title="YouTube video player" frameborder="0"
