--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
 
     </div>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/vwbySrsD7RU?si=JHhDpQiHkQThxUBK"
-      title="YouTube video player" frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-    </iframe>
+    <div class="video">
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/vwbySrsD7RU?si=JHhDpQiHkQThxUBK"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+      </iframe>
+
+    </div>
 
   </section>
 
