--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <title>WebFilmes</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik+Wet+Paint&display=swap" rel="stylesheet">
 </head>
 
 <body>
