--- a/index.html
+++ b/index.html
@@ -38,6 +38,27 @@
 
   </section>
 
+  <section class="categoria">
+    <h2>Filmes e séries</h2>
+    <div class="categoria-videos">
+      <a href="LINK ViDEO">
+        <img src="LINK IMAGEM" />
+      </a>
+      <a href="LINK ViDEO">
+        <img src="LINK IMAGEM" />
+      </a>
+      <a href="LINK ViDEO">
+        <img src="LINK IMAGEM" />
+      </a>
+      <a href="LINK ViDEO">
+        <img src="LINK IMAGEM" />
+      </a>
+      <a href="LINK ViDEO">
+        <img src="LINK IMAGEM" />
+      </a>
+    </div>
+  </section>
+
 </body>
 
 </html>
