--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
   </section>
   <section class="categoria">
-    <h2>Filmes e séries</h2>
+    <h2>Relacionados</h2>
     <div class="categoria-videos">
-      <a href="LINK ViDEO">
-        <img src="LINK IMAGEM" />
+      <a href="https://youtu.be/Ckr9oI7ow1A?si=AhlgBHqtaYPI3XCO">
+        <img src="AhlgBHqtaYPI3XCO" />
       </a>
       <a href="LINK ViDEO">
         <img src="LINK IMAGEM" />
