--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   <section class="categoria">
     <h2>Relacionados</h2>
     <div class="categoria-videos">
-      <a href="https://youtu.be/Ckr9oI7ow1A?si=AhlgBHqtaYPI3XCO">
-        <img src="AhlgBHqtaYPI3XCO" />
+      <a href="https://youtu.be/Ckr9oI7ow1A?si=qDzYgD3anN8XSFpS">
+        <img src=" https://img.youtube.com/vi/qDzYgD3anN8XSFpS/maxresdefault.jpg" />
       </a>
       <a href="LINK ViDEO">
         <img src="LINK IMAGEM" />
