--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <a href="https://youtu.be/_wcbqMUNBF4?si=R3r82N-s23k4aJ7z">
         <img src=" https://img.youtube.com/vi/R3r82N-s23k4aJ7z/maxresdefault.jpg" />
       </a>
-      <a href="LINK ViDEO">
-        <img src="LINK IMAGEM" />
+      <a href="https://youtu.be/UIryhZTF41w?si=VCW4MaXURB5r4Yi3">
+        <img src=" https://img.youtube.com/vi/VCW4MaXURB5r4Yi3/maxresdefault.jpg" />
       </a>
       <a href="LINK ViDEO">
         <img src="LINK IMAGEM" />
