--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <a href="https://youtu.be/5Rz5ELTxG48?si=ZFVt-KAZHryFSRTe">
         <img src="L https://img.youtube.com/vi/ZFVt-KAZHryFSRTe/maxresdefault.jpg" />
       </a>
-      <a href="LINK ViDEO">
-        <img src="LINK IMAGEM" />
+      <a href="https://youtu.be/jx33_J14BGM?si=AqgMGNh7X2QKA9yW">
+        <img src="https://img.youtube.com/vi/AqgMGNh7X2QKA9yW/maxresdefault.jpg" />
       </a>
     </div>
   </section>
