--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <img src=" https://img.youtube.com/vi/VCW4MaXURB5r4Yi3/maxresdefault.jpg" />
       </a>
       <a href="https://youtu.be/5Rz5ELTxG48?si=ZFVt-KAZHryFSRTe">
-        <img src="L https://img.youtube.com/vi/ZFVt-KAZHryFSRTe/maxresdefault.jpg" />
+        <img src="https://img.youtube.com/vi/ZFVt-KAZHryFSRTe/maxresdefault.jpg" />
       </a>
       <a href="https://youtu.be/jx33_J14BGM?si=AqgMGNh7X2QKA9yW">
         <img src="https://img.youtube.com/vi/AqgMGNh7X2QKA9yW/maxresdefault.jpg" />
